syntax = "proto3";
package prochat.v1;

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string login = 1;
  string password = 3;
}